feats: add some top panel widgets

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "modules/nice"]
 	path = modules/nice
 	url = git@github.com:mut-ex/awesome-wm-nice.git
+[submodule "modules/lain"]
+	path = modules/lain
+	url = git@github.com:lcpz/lain.git
+[submodule "modules/awesome-wm-widgets"]
+	path = modules/awesome-wm-widgets
+	url = git@github.com:streetturtle/awesome-wm-widgets.git
