feat: added bling modules

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "modules/awesome-wm-widgets"]
 	path = modules/awesome-wm-widgets
 	url = git@github.com:streetturtle/awesome-wm-widgets.git
+[submodule "modules/bling"]
+	path = modules/bling
+	url = git@github.com:BlingCorp/bling.git
